--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "websocket": "^1.0.28"
   }
 }
