--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
   },
   "homepage": "https://github.com/Muhammad-Azeem-Ullah/Network-Tool-Revamp#readme",
   "dependencies": {
+    "core-decorators": "^0.20.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "nodemon": "^1.18.6"
+    "lodash": "^4.17.11",
+    "mikronode": "^2.3.11",
+    "mongodb": "^3.1.9",
+    "nodemon": "^1.18.6",
+    "request": "^2.88.0",
+    "rxjs": "^5.3.0"
   }
 }
