--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mongodb": "^3.1.9",
     "nodemon": "^1.18.6",
     "request": "^2.88.0",
-    "rxjs": "^5.3.0"
+    "rxjs": "^5.3.0",
+    "time-stamp": "^2.2.0",
+    "ws": "^6.1.0"
   }
 }
