--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "request": "^2.88.0",
     "rxjs": "^5.3.0",
     "time-stamp": "^2.2.0",
+    "websocket": "^1.0.28",
     "ws": "^6.1.0"
   }
 }
-
