--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/Muhammad-Azeem-Ullah/Network-Tool-Revamp#readme",
   "dependencies": {
+    "async": "^2.6.1",
+    "async-foreach": "^0.1.3",
+    "async-parallel": "^1.2.3",
     "core-decorators": "^0.20.0",
     "ejs": "^2.6.1",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mikronode": "^2.3.11",
@@ -31,4 +35,3 @@
     "ws": "^6.1.0"
   }
 }
-
