--- a/package.json
+++ b/package.json
@@ -32,6 +32,19 @@
     "request": "^2.88.0",
     "rxjs": "^5.3.0",
     "time-stamp": "^2.2.0",
-    "ws": "^6.1.0"
+    "ws": "^6.1.0",
+    "bcryptjs": "*",
+    "body-parser": "*",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express-messages": "^1.0.1",
+    "express-session": "*",
+    "express-validator": "^5.3.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*"
   }
 }
